<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.open.external.libs</groupId>
    <artifactId>one-nio</artifactId>
    <packaging>jar</packaging>
    <version>1.0.3-SNAPSHOT</version>
    <name>one-nio</name>
    <url>https://github.com/odnoklassniki/one-nio</url>
    <description>Unconventional Java I/O library</description>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>http://stash.open-broker.ru/projects/LIB/repos/one-nio/browse</url>
        <connection>scm:git:ssh://git@stash.open-broker.ru/lib/one-nio.git</connection>
      <tag>HEAD</tag>
  </scm>
    <developers>
        <developer>
            <id>apangin</id>
            <name>Andrei Pangin</name>
            <email>noreply@pangin.pro</email>
        </developer>
        <developer>
            <id>incubos</id>
            <name>Vadim Tsesko</name>
            <email>mail@incubos.org</email>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>5.1</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.15</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.jms</groupId>
                    <artifactId>jms</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jdmk</groupId>
                    <artifactId>jmxtools</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jmx</groupId>
                    <artifactId>jmxri</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.sun</groupId>
            <artifactId>tools</artifactId>
            <version>1.4.2</version>
            <scope>system</scope>
            <systemPath>${java.home}/../lib/tools.jar</systemPath>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>install</defaultGoal>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>compile-native</id>
                        <phase>compile</phase>
                        <configuration>
                            <target name="compile-native">
                                <property name="build.dir" value="target" />
                                <property name="src.dir" value="src" />
                                <property name="gcc.extra.args" value="" />

                                <echo message="Compiling native library..." />

                                <mkdir dir="${build.dir}/native" />

                                <pathconvert property="src.native" pathsep=" ">
                                    <fileset dir="${src.dir}" includes="**/*.c" />
                                </pathconvert>

                                <exec os="Linux" executable="gcc">
                                    <arg line="-g -O3 -fPIC -D_GNU_SOURCE ${gcc.extra.args} -o ${build.dir}/native/libonenio.so -shared -Wl,-soname,libonenio.so -I ${java.home}/../include -I ${java.home}/../include/linux                                                ${src.native} -ldl -lrt" />
                                </exec>

                                <move verbose="true" failonerror="false" file="${build.dir}/native/libonenio.so" todir="${build.dir}/classes" />
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>openback-release</id>
            <url>http://repo.open-broker.ru/repository/releases</url>
        </repository>
        <snapshotRepository>
            <id>openback-snapshot</id>
            <url>http://repo.open-broker.ru/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
